<resources>
    <string name="app_name">Multi Purpose</string>

    <!-- Application Name -->
    <string name="note_application">Note</string>
    <string name="weather_application">Weather</string>
    <string name="chronometer_application">Chronometer</string>
    <string name="counter_application">Counter</string>
    <string name="alarm_application">Alarm</string>
    <string name="reminder_application">Reminder</string>

    <!-- Dialog -->
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_submit_button">Submit</string>

    <!-- Note Application -->
    <!-- NOTE: string array must match with viewModel utility function -->
    <string name="note_list_header">All Note</string>
    <string-array name="note_list_categories">
        <item>Default</item>
        <item>Name - ASC</item>
        <item>Name - DESC</item>
        <item>Last Updated - ASC</item>
        <item>Last Updated - DESC</item>
        <item>Color - ASC</item>
        <item>Color - DESC</item>
    </string-array>
    <string name="note_list_title">Untitled Note</string>
    <string name="note_list_total_item">0</string>
    <string name="note_list_dialog_new_header">New Note</string>
    <string name="note_list_dialog_edit_header">Edit Note</string>
    <string name="note_list_dialog_title_hint">Enter a title</string>
    <string name="note_list_color_label">Color Label:</string>
    <string-array name="note_list_dialog_colors_label">
        <item>Default</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Violet</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>
    <string name="note_item_header">All Page</string>
    <string name="note_item_new_header">New Page</string>
    <string name="note_item_edit_header">Edit Page</string>
    <string name="note_item_title_hint">Enter a title</string>
    <string name="note_item_content_hint">Enter a note here…</string>

    <!-- Weather Application -->
    <string name="weather_placeholder">Weather</string>
    <string name="weather_temp">60&#176;F</string>
    <string name="weather_error_message">Something Went Wrong…</string>
    <string name="weather_sunrise">Sunrise</string>
    <string name="weather_sunset">Sunset</string>
    <string name="weather_wind">Wind</string>
    <string name="weather_pressure">Pressure</string>
    <string name="weather_humidity">Humidity</string>
    <string name="weather_powered_by">Powered By</string>
    <string name="weather_open_weather">OpenWeather</string>
    <string name="weather_setting_header">Setting</string>
    <string name="weather_use_location">Use Location</string>
    <string name="weather_zipcode_hint">Enter a zipcode</string>
    <string name="weather_country_hint">Enter a country</string>

    <!-- Chronometer Application -->
    <string name="chronometer_setting_header">Setting</string>
    <string name="chronometer_setting_hint">00:00:00</string>
</resources>
