<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/_note_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:fontFamily="@font/madeleina_sans"
        android:padding="5dp"
        android:text="@string/note_list_dialog_new_header"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/_note_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/note_list_dialog_title_hint"
        android:ems="10"
        android:fontFamily="@font/madeleina_sans"
        android:hint="@string/note_list_dialog_title_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_note_dialog_header" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_note_title_edit_text">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/note_list_color_label"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/_note_colors_label_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout">

        <Button
            android:id="@+id/_note_dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#FF6464"
            android:backgroundTintMode="multiply"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dialog_cancel_button"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/_note_dialog_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#64FF6B"
            android:backgroundTintMode="multiply"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dialog_submit_button"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>